fixed nav bar and footer spacing issue

--- a/main.css
+++ b/main.css
@@ -197,6 +197,7 @@ a {
     display: flex;
     flex-direction: column; 
     min-height: 50vh;
+    margin: 0;
     background: url(https://i.ytimg.com/vi/XDzT8zJN5Zs/maxresdefault.jpg);  
 }
 
